# murmure

./: GUIDELINES.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: build-linux.yml  build-macos-intel.yml  build-macos.yml  build-windows.yml  ci.yaml  release.yml
e2e-tests/: wdio.conf.js
e2e-tests/specs/: 3-llm-connect.spec.js
src/: tailwind.css
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/audio/: audio.rs  helpers.rs  microphone.rs  mod.rs  pipeline.rs  recorder.rs  sound.rs  types.rs
src-tauri/src/commands/: dictionary.rs  http_api.rs  settings.rs
src-tauri/src/dictionary/: dictionary.rs  store.rs  types.rs
src-tauri/src/engine/: engine.rs
src-tauri/src/http_api/: http_api.rs  server.rs
src-tauri/src/llm/: llm.rs
src-tauri/src/model/: model.rs
src-tauri/src/overlay/: overlay.rs
src-tauri/src/settings/: types.rs
src-tauri/src/shortcuts/: linux.rs  macos.rs  windows.rs
src/components/: alert.tsx  dropdown-menu.tsx  model-card.tsx  record-label.tsx  render-keys.tsx  rule-card.tsx
src/features/home/: home.tsx
src/features/home/audio-visualizer/: audio-visualizer.tsx
src/features/home/history/: history.tsx
src/features/home/history/hooks/: use-history-state.ts
src/features/home/statistics/: statistics.helpers.ts
src/features/home/statistics/hooks/: use-get-statistic.ts
src/features/llm-connect/: llm-connect.tsx
src/features/llm-connect/onboarding/steps/: step-install.tsx  step-intro.tsx  step-model.tsx
src/features/llm-connect/preset-selector/: preset-selector.tsx
src/features/onboarding/hooks/: use-onboarding-calculations.ts
src/features/settings/custom-dictionary/: custom-dictionary.tsx
src/features/settings/shortcuts/: shortcuts.tsx
src/features/settings/shortcuts/hooks/: use-shortcut.ts
src/features/settings/system/: system.tsx
src/features/settings/system/log-level-settings/: log-level-settings.tsx
src/features/settings/system/mic-settings/: mic-settings.tsx
src/features/update-checker/: update-checker.tsx
src/i18n/locales/: fr.json
src/overlay/: index.html
(+3 files in other folders)
