[package]
name = "murmure"
version = "1.7.0"
description = "Privacy-first speech-to-text, running entirely on your machine"
authors = ["al1x-ai.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "murmure_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
hound = "3.5.1"
cpal = "0.16.0"
rodio = "0.19"
once_cell = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
anyhow = "1.0"
ort = { version = "2.0.0-rc.10", features = ["download-binaries"] }
ndarray = "0.16.1"
regex = "1.11.2"
thiserror = "2.0.16"
log = "0.4.28"
enigo = "0.2"
rphonetic = "3.0.4"
tokio = { version = "1", features = ["full"] }
text2num = "2.6.2"
axum = { version = "0.7", features = ["multipart"] }
hyper = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["clock"] }
tauri-plugin-store = "2"
tauri-plugin-log = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(target_os = "linux")'.dependencies]
rdev = "0.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-global-shortcut = "2"
